<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/text_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/credits_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_title"
            android:fontFamily="@font/aerolite"
            android:textColor="@color/textcolor_normal"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/who_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/part1"
            android:textColor="@color/textcolor_normal"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/credits_title"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/inspired_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/holly"
            android:textColor="@color/textcolor_normal"
            android:textColorLink="@color/textcolor_link"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/who_tv"
            tools:layout_editor_absoluteX="175dp" />

        <TextView
            android:id="@+id/more_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/more_info"
            android:textColor="@color/textcolor_normal"
            android:textColorLink="@color/textcolor_link"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/inspired_tv"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/done_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textcolor_ghosted"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="version" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/copyright"
            android:textColor="@color/textcolor_normal"
            android:textColorLink="@color/textcolor_link"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/done_butt"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/legalese_title"
            android:fontFamily="@font/aerolite"
            android:textColor="@color/textcolor_normal"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/more_tv"
            tools:layout_editor_absoluteX="185dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/legalese_"
            android:textColor="@color/textcolor_normal"
            android:textColorLink="@color/textcolor_link"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
