<?xml version="1.0" encoding="utf-8"?>
<!--
    Base layout for the app.  This includes everything that's
    common to both the build mode and solve mode.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/build_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/designer_block"
        android:text="@string/mode_build"
        android:textSize="30sp"
        android:textColor="@color/textcolor_on"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_switch"
        app:layout_constraintEnd_toStartOf="@+id/main_switch" />

    <TextView
        android:id="@+id/solve_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/designer_block"
        android:text="@string/mode_solve"
        android:textColor="@color/textcolor_ghosted"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/main_switch"
        app:layout_constraintStart_toEndOf="@+id/main_switch" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/main_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/connected_iv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.sleepfuriously.dollargame2.view.PlayAreaFrameLayout
        android:id="@+id/play_area_fl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/draw_area_bg"
        app:layout_constraintBottom_toTopOf="@+id/bottom_hint_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_switch"
        app:layout_constraintVertical_bias="0.0">

    </com.sleepfuriously.dollargame2.view.PlayAreaFrameLayout>

    <TextView
        android:id="@+id/bottom_hint_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:minHeight="40dp"
        android:padding="8dp"
        android:textColor="@color/textcolor_normal"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/count_label_tv"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="hints go here" />

    <ImageView
        android:id="@+id/connected_iv"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="4dp"
        android:src="@drawable/ic_not_connected"
        app:layout_constraintBottom_toBottomOf="@+id/main_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/genus_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:fontFamily="@font/designer_block"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:minEms="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/genus_label_tv"
        app:layout_constraintBottom_toTopOf="@+id/count_tv"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="59"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/count_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:fontFamily="@font/designer_block"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:minEms="2"
        app:layout_constraintBaseline_toBaselineOf="@+id/count_label_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="-2"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/info_bg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/random_all_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_all_button_text"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/bottom_hint_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/count_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/designer_block"
        android:text="@string/count_label"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/genus_label_tv"
        app:layout_constraintEnd_toStartOf="@+id/count_tv" />

    <TextView
        android:id="@+id/genus_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/designer_block"
        android:text="@string/genus_label"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/genus_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>